# chatbot-orchestrator

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.monitoring.yml  docker-compose.yml  makemigrations.sh  pyproject.toml  run.sh  test_platform_history.py
UI/: README.md  admin-app.js  admin-styles.css  admin.html  chat-app.js  chat-styles.css  index.html  test-admin-api.html
alembic/: env.py
alembic/versions/: 25f093a92447_update.py  56f2c70cf0aa_update_table_field.py  88890a049269_init_table.py  9d0eb13ee0c9_update.py  aabceda460c7_update.py  adb12d6bf275_update.py
app/: main.py
app/api/: __init__.py  dependencies.py
app/application/: __init__.py  exceptions.py
app/clients/: __init__.py  core_ai_client.py  platform_client.py
app/core/: __init__.py  database.py  enums.py  redis_client.py  security.py  settings.py
app/crud/: __init__.py  bot_crud.py  conversation_crud.py  core_ai_crud.py  platform_crud.py
app/db/: __init__.py  base.py  session.py
app/domain/: exceptions.py
app/infrastructure/: __init__.py
app/models/: __init__.py  bot.py  conversation.py  core_ai.py  job.py  platform.py
app/presentation/: __init__.py
docs/: AI_CLIENT_IMPLEMENTATION.md  API.md  API_DOCUMENTATION.md  APPLICATION_LAYER.md  ARCHITECTURE.md  CONFIGURATION.md  DOMAIN_LAYER.md  HISTORY_CHUNKING_FEATURE.md  INCREMENTAL_HISTORY_PROCESSING.md  INFRASTRUCTURE_LAYER.md  JOB_CANCELLATION_FEATURE.md  MESSAGE_HANDLER_DOCUMENTATION.md  MESSAGE_PROCESSING_FLOW.md  MESSAGE_PROCESSING_QUICK_REFERENCE.md  PRESENTATION_LAYER.md  README.md
monitoring/: README.md
tests/: conftest.py  test_api_bot.py  test_api_chat.py  test_api_core_ai.py  test_api_platform.py  test_api_security.py  test_health.py
(+58 files in other folders)
