[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
version = "0.1.0"
description = "Universal Chat Orchestration Middleware"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Trieu Ngoc Tam", email = "tamtn.dynamite.work@gmail.com" }
]
dependencies = [
    # Core FastAPI
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",

    # HTTP Clients
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",  # For testing

    # Redis & Caching
    "redis[hiredis]>=5.0.0",
    "aioredis>=2.0.0",
    "celery>=5.3.0",

    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Logging & Utilities
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",

    # Monitoring & Metrics
    "prometheus-client>=0.19.0",
    "sentry-sdk[fastapi]>=1.38.0",

    # Additional utilities
    "backoff>=2.2.0",
    "tenacity>=8.2.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.9.1",
    "ruff>=0.0.292",
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"